<resources>
    <string name="app_name">TravelJournalApp</string>
    <string name="my_travels_tv">My Travels</string>
    <string name="travel_journal_tv">Travel Journal</string>
    <string name="sentence_opening">Welcome to your digital travel diary, where every journey becomes a cherished memory.</string>
    <string name="get_started_btn"><![CDATA[Get Started >]]></string>
    <string name="enter_country_name_et">Enter Country Name</string>
    <string name="enter_destination_name_et">Enter Destination name</string>
    <string name="enter_destination_description_et">Enter destination description</string>
    <string name="open_camera_btn">Open camera</string>
    <string name="pick_image_btn">Pick Image</string>
    <string name="pick_location_btn">Pick Location</string>
    <string name="pick_date_btn">Pick Date</string>
    <string name="add_travel_btn">Add Travel</string>
    <string name="description_title">Description</string>
    <string name="add_travel_title">Add Travel</string>
    <string name="confirm_delete_title">Confirm delete</string>
    <string name="delete_all_message">Are you sure you want to delete all travels?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="item_deleted">Travel deleted</string>
    <string name="destination_title">Destination title</string>
    <string name="item_detailed_date">Item detailed date</string>
    <string name="country_title_travel">Country title Travel</string>
    <string name="add_travel">Add Travel</string>
    <string name="or">Or</string>
    <string name="no_location_selected">No location selected</string>
    <string name="cancel_btn">Cancel</string>
    <string name="country_name">country name</string>
    <string name="destination_name">destination name</string>
    <string name="update_travel">Update Travel</string>
    <string name="search">Search</string>
    <string name="are_you_sure_you_want_to_delete_this_travel">Are you sure you want to delete this travel?</string>
    <string name="travel_deleted_message">Travel deleted</string>
    <string name="fill_all_the_fields">Fill All The Fields</string>
    <string name="the_travel_is_added">The travel is added</string>
    <string name="the_travel_updated">The travel updated</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="exit_title">Exit</string>
</resources>