<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="4dp"
    app:cardCornerRadius="20dp"
    android:backgroundTint="#D8E1C5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">


        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_launcher_background"
            android:id="@+id/travel_image"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:text="@string/country_title_travel"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/country_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/destination_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/destination_title"/>

            <TextView
                android:id="@+id/travel_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/item_detailed_date" />


        </LinearLayout>


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_delete_24"
            android:id="@+id/delete_travel_btn"
            android:layout_alignParentEnd="true"
            android:backgroundTint="#D8E1C5"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>