<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/background_details"/>

                <ImageButton
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_back_24"
                    android:backgroundTint="#6DB889"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentBottom="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentBottom="true">

                        <TextView
                            android:id="@+id/country_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="15dp"
                            android:gravity="start"
                            android:text="@string/country_name"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_alignParentEnd="true"
                            android:backgroundTint="#A7B688"
                            android:src="@drawable/baseline_edit_24"
                            android:id="@+id/edit_travel_Details_btn"/>

                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/destination_title"
                        android:gravity="start"
                        android:textSize="25dp"
                        android:text="@string/destination_name"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="5dp"/>


                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    android:padding="7dp">



                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="#A7B688">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/location_TV"
                            android:gravity="start"
                            android:textSize="15dp"
                            android:layout_margin="5dp"
                            android:drawableLeft="@drawable/baseline_location_pin_black"
                            android:textColor="@color/black"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp"
                        android:backgroundTint="#A7B688"
                        android:layout_marginTop="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/date_TV"
                            android:gravity="start"
                            android:textSize="15sp"
                            android:layout_margin="5dp"
                            android:drawableLeft="@drawable/baseline_calendar_month_black"
                            android:textColor="@color/black"/>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description_title"
                        android:textSize="22dp"
                        android:textColor="@color/black"
                        android:textStyle="bold">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/destination_desc"
                        android:gravity="start"
                        android:textSize="20sp"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="2dp"
                        android:text="@string/description_title"
                        android:textColor="@color/black"/>

                    <ImageView
                        android:id="@+id/destination_image"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_gravity="center"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp"/>
                </LinearLayout>

            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
